[gd_scene load_steps=13 format=3 uid="uid://dieemx84knigk"]

[ext_resource type="Texture2D" uid="uid://buvlw111ric5i" path="res://sprites/skins/marble_beta.png" id="1"]
[ext_resource type="Script" path="res://player/player.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://5gcjhexv2jf0" path="res://sprites/arrow.png" id="3"]
[ext_resource type="AudioStream" uid="uid://dbylxah86urpc" path="res://sounds/roll3.mp3" id="6"]
[ext_resource type="AudioStream" uid="uid://c3vjga2yah7b4" path="res://sounds/roll2.mp3" id="7"]
[ext_resource type="AudioStream" uid="uid://sxa406eodggm" path="res://sounds/roll1.mp3" id="8"]

[sub_resource type="PhysicsMaterial" id="2"]
friction = 0.0

[sub_resource type="CircleShape2D" id="1"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_o6yyl"]
radius = 13.0

[sub_resource type="Curve" id="3"]
_data = [Vector2(0, 1), 0.0, -0.171725, 0, 0, Vector2(1, 0.00770819), -3.68926, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="4"]
curve = SubResource("3")

[sub_resource type="ParticleProcessMaterial" id="9"]
spread = 180.0
initial_velocity_min = 50.0
initial_velocity_max = 100.0
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("4")
color = Color(1, 0.423529, 0, 1)

[node name="player" type="RigidBody2D"]
collision_layer = 8
collision_mask = 9
mass = 65535.0
physics_material_override = SubResource("2")
gravity_scale = 8.0
can_sleep = false
contact_monitor = true
angular_damp = 100.0
script = ExtResource("2")

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="kill" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="collision" type="CollisionShape2D" parent="kill"]
shape = SubResource("1")

[node name="goal" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="collision" type="CollisionShape2D" parent="goal"]
shape = SubResource("1")

[node name="ground" type="Area2D" parent="."]
collision_layer = 0

[node name="collision" type="CollisionShape2D" parent="ground"]
shape = SubResource("CircleShape2D_o6yyl")

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("1")

[node name="death" type="GPUParticles2D" parent="."]
emitting = false
amount = 100
process_material = SubResource("9")
lifetime = 0.5
one_shot = true
explosiveness = 1.0
randomness = 1.0

[node name="flag_pointer" type="Node2D" parent="."]

[node name="arrow" type="Sprite2D" parent="flag_pointer"]
self_modulate = Color(1, 1, 1, 0.498039)
position = Vector2(27, 0)
scale = Vector2(0.75, 0.75)
texture = ExtResource("3")

[node name="camera" type="Camera2D" parent="."]
ignore_rotation = false
position_smoothing_speed = 10.0

[node name="canvas" type="CanvasLayer" parent="."]

[node name="corner" type="Control" parent="canvas"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="axis" type="Node2D" parent="canvas"]

[node name="gravity" type="Node2D" parent="canvas/axis"]
position = Vector2(0, 1)

[node name="next_level" type="Timer" parent="."]

[node name="roll_1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8")
volume_db = -80.0
pitch_scale = 1.41
autoplay = true

[node name="roll_2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7")
volume_db = -80.0
pitch_scale = 0.69
autoplay = true

[node name="roll_3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6")

[node name="speed" type="Label" parent="."]
visible = false
offset_left = -20.0
offset_top = -28.0
offset_right = 20.0
offset_bottom = -14.0

[connection signal="body_entered" from="." to="." method="_on_player_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_player_body_exited"]
[connection signal="area_entered" from="kill" to="." method="_on_kill_area_entered"]
[connection signal="area_entered" from="goal" to="." method="_on_goal_area_entered"]
